Refactor to use MediatR and update to .NET 9.0
Updated project to target .NET 9.0 and added dependencies for Mapster and MediatR. Refactored controllers to use MediatR for handling commands and queries, enhancing maintainability. Introduced new DTOs, command/query classes, and handlers to support MediatR. Added a PaginatedResponse class for paginated data handling. Implemented a BaseApiController to provide common MediatR functionality for derived controllers.

--- a/Pokemon.Application/Pokemon.Application.csproj
+++ b/Pokemon.Application/Pokemon.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Pokemon.Domain\Pokemon.Domain.csproj" />
   </ItemGroup>
 
